# fingerprint-wasm

./: README.md
my_wasm_project/: Cargo.toml  LICENSE.txt
my_wasm_project/pkg/: fp_wasm.d.ts  fp_wasm.js  fp_wasm_bg.wasm  fp_wasm_bg.wasm.d.ts  package.json
my_wasm_project/src/: lib.rs
