[package]
name = "fp_wasm"
version = "0.1.0"
edition = "2021"
description = "A Rust-based WebAssembly project for browser fingerprinting."
repository = "https://github.com/toymoa/fingerprint-wasm"
license = "MIT"

[dependencies]
sha2 = "0.10"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Navigator", "Screen", "HtmlCanvasElement", "CanvasRenderingContext2d"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib"]

